--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           pretty
 
 # Setup
-title:               xst
+title:               exist
 tagline:
 url:                 https://x.st
 paginate:            1
